--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: vectorscor.es
 email: john@johnteskemusic.com
 description: >
     A series of new compositions built on the web.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/vector-scores" # the subpath of your site, e.g. /blog
 url: "http://vectorscor.es" # the base hostname & protocol for your site
 twitter_username: johnteske
 github_username:  johnteske
