--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ compress_html:
     clippings: all
     comments: all #["<!-- ", " -->"]
     #endings: all
-    #ignore:
-        #envs: [local]
+    ignore:
+        envs: [debug]
     #blanklines: false
     #profile: true
     #startings: [html, head, body]
