--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: vectorscor.es
+title: vectorscores
 email: john@johnteskemusic.com
 description: >
     A series of new compositions built on the web.
 baseurl: "/vectorscores" # the subpath of your site, e.g. /blog
-url: "http://vectorscor.es" # the base hostname & protocol for your site
+url: "http://vectorscores.org"
 twitter_username: johnteske
 github_username:  johnteske/vectorscores
 website: http://johnteskemusic.com
