Update description and performances

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: vectorscores
 email: john@johnteskemusic.com
 description: >
-    A series of new compositions built on the web.
+    A new series of dynamic compositions.
 baseurl: "/vectorscores"
 url: "http://vectorscores.org"
 twitter_username: johnteske
