--- a/_data/performances.yml
+++ b/_data/performances.yml
@@ -1,24 +1,46 @@
--
-    date: June 2, 2017
-    time: 1 pm
-    title: New Music on the Bayou
-    works:
-        - ad;sr
-    address: >
-        Northminster Church<br />
-        2701 Lamy Ln<br />
-        Monroe, LA
-    price: Free
-    url: "http://newmusiconthebayou.com"
--
-    date: May 5, 2017
-    time: 8 pm
-    title: Seattle Composers' Salon
-    works:
-        - ad;sr
-    address: >
-        Chapel Performance Space<br />
-        4649 Sunnyside Ave N<br />
-        Seattle, WA
-    price: $5–15 suggested donation
-    url: "http://waywardmusic.org"
+upcoming:
+    -
+        date_start: 2017-09-23
+        time: 8 pm
+        title: vectorscores with Neil Welch
+        address: >
+            Rainier Arts Center<br />
+            3515 S Alaska St<br />
+            Seattle, WA
+        price: $5–15 suggested donation
+        url: "http://www.rainierartscenter.org/"
+    -
+        date_start: 2017-10-06
+        time: 8 pm
+        title: vectorscores with Sean Hamilton
+        address: >
+            Chapel Performance Space<br />
+            4649 Sunnyside Ave N<br />
+            Seattle, WA
+        price: $5–15 suggested donation
+        url: "http://waywardmusic.org"
+past:
+    -
+        date_start: 2017-06-02
+        time: 1 pm
+        title: New Music on the Bayou
+        works:
+            - ad;sr
+        address: >
+            Northminster Church<br />
+            2701 Lamy Ln<br />
+            Monroe, LA
+        price: Free
+        url: "http://newmusiconthebayou.com"
+    -
+        date_start: 2017-05-05
+        time: 8 pm
+        title: Seattle Composers' Salon
+        works:
+            - ad;sr
+        address: >
+            Chapel Performance Space<br />
+            4649 Sunnyside Ave N<br />
+            Seattle, WA
+        price: $5–15 suggested donation
+        url: "http://waywardmusic.org"
