Consolidate pages into directory
about.md remains in the root directory as it includes README.md

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@ safe: true
 markdown: kramdown
 sass:
     style: compressed
+include: ["_pages"]
+exclude: ["websockets.rb"]
 
 # Compression settings
 compress_html:
