Update file structure, including creating bin/ and scripts
Create scripts for frequently-used commands

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ markdown: kramdown
 sass:
     style: compressed
 include: ["_pages"]
-exclude: ["websockets.rb"]
+exclude: ["bin"]
 
 # Compression settings
 compress_html:
