--- a/_data/performances.yml
+++ b/_data/performances.yml
@@ -1,15 +1,5 @@
 upcoming:
     -
-        date_start: 2017-09-23
-        time: 8 pm
-        title: vectorscores with Neil Welch
-        address: >
-            Rainier Arts Center<br />
-            3515 S Alaska St<br />
-            Seattle, WA
-        price: $5–15 suggested donation
-        url: "http://www.rainierartscenter.org/"
-    -
         date_start: 2017-10-06
         time: 8 pm
         title: vectorscores with Sean Hamilton
@@ -21,13 +11,25 @@ upcoming:
         url: "http://waywardmusic.org"
     -
         date_start: 2017-10-07
-        title: Sean Hamilton and vectorscores
+        time: 8 pm
+        title: Sean Hamilton, John Teske, Chris SW Anderson
         address: >
             Selectors' Records<br />
             8 E. Pender St.<br />
             Vancouver BC, Canada
+        price: pay what you can
         url: "http://www.selectorsrecords.com"
 past:
+    -
+        date_start: 2017-09-23
+        time: 8 pm
+        title: vectorscores with Neil Welch
+        address: >
+            Rainier Arts Center<br />
+            3515 S Alaska St<br />
+            Seattle, WA
+        price: $5–15 suggested donation
+        url: "http://www.rainierartscenter.org/"
     -
         date_start: 2017-06-02
         time: 1 pm
