--- a/bin/Rakefile
+++ b/bin/Rakefile
@@ -52,11 +52,19 @@ paths = '{' + dirs.join(',') + '}**/*.js'
 
 # Lint source files
 Eslintrb::EslintTask.new :eslint_source do |t|
+  ignored_files = []
+
   # Exclude .js files with frontmatter
   source_files = Dir[paths].reject do |file|
     first_line = File.open(file, &:readline)
-    !!(first_line =~ /^---/)
+
+    if first_line =~ /^---/
+      ignored_files.push(file)
+    end
   end
+
+  puts ignored_files
+  puts "Ignoring #{ignored_files.length} source files containing front matter"
 
   t.pattern = source_files
   t.options = options
