Add .travis.yml config

--- a/bin/Rakefile
+++ b/bin/Rakefile
@@ -1,6 +1,7 @@
 require 'eslintrb/eslinttask'
 
-task :default => [:eslint_source, :eslint_build]
+task :default => [:test]
+task :test => [:eslint_source, :eslint_build]
 
 options = {
   'extends': 'eslint:recommended',
