Revert "Add .travis.yml config"
This reverts commit 01c3325a73add758edcdb7e5a66d0382a5cc2c46.

--- a/bin/Rakefile
+++ b/bin/Rakefile
@@ -1,7 +1,6 @@
 require 'eslintrb/eslinttask'
 
-task :default => [:test]
-task :test => [:eslint_source, :eslint_build]
+task :default => [:eslint_source, :eslint_build]
 
 options = {
   'extends': 'eslint:recommended',
