Break Rakefile into individual .rake files
The eslint task can be further optimized to build the file lists as
a task dependency--currently the files are created on load.

--- a/bin/Rakefile
+++ b/bin/Rakefile
@@ -1,94 +1,5 @@
-require 'eslintrb/eslinttask'
-require 'json'
-require 'rubocop/rake_task'
+Rake.add_rakelib 'bin/tasks'
 
 task default: %i[test]
 task test: %i[jekyll_build eslint rubocop]
-task eslint: %i[eslint_info eslint_frontmatter eslint_source eslint_build]
-
-task :jekyll_build do
-  sh 'bundle exec jekyll build'
-end
-
-eslint_options = lambda {
-  eslint_file = File.read('.eslintrc.json')
-  JSON.parse(eslint_file)
-}.call
-
-js_paths = lambda {
-  dirs = [
-    'js/vectorscores',
-    'js/vs/',
-    'scores/'
-  ]
-
-  '{' + dirs.join(',') + '}**/*.js'
-}.call
-
-tmp_dir = '.tmp'
-
-source_files = []
-frontmatter_tmp_files = []
-
-# Make a directory for temp files if needed
-FileUtils.mkdir_p(tmp_dir)
-
-def write_tmp_file_wo_liquid(src, dest)
-  # Make a directory for temp file if needed
-  FileUtils.mkdir_p(File.dirname(dest))
-
-  # Write a file without frontmatter or liquid
-  File.open(dest, 'w') do |file|
-    text = File.read(src)
-
-    # Comment out front matter
-    text = text.gsub(/(^---\n(.|\n)*---)/, '/*\1*/')
-
-    # Comment out liquid tags
-    text = text.gsub(/({%.*%}|{{.*}})/, '/*\1*/')
-
-    file.puts(text)
-  end
-end
-
-# Find source files with frontmatter
-Dir[js_paths].each do |file|
-  first_line = File.open(file, &:readline)
-
-  if first_line =~ /^---/
-    tmp_path = tmp_dir + '/' + File.path(file)
-
-    write_tmp_file_wo_liquid(file, tmp_path)
-
-    frontmatter_tmp_files.push(tmp_path)
-  else
-    source_files.push(file)
-  end
-end
-
-task :eslint_info do
-  puts "Linting #{source_files.size} .js files without frontmatter"
-  puts "Linting #{frontmatter_tmp_files.size} .js files with frontmatter"
-end
-
-# Lint source files with front matter, from .tmp/
-Eslintrb::EslintTask.new :eslint_frontmatter do |t|
-  t.pattern = frontmatter_tmp_files
-  t.options = eslint_options
-end
-
-# Lint source files, excluding those with front matter
-Eslintrb::EslintTask.new :eslint_source do |t|
-  t.pattern = source_files
-  t.options = eslint_options
-end
-
-# Lint built files with no options to catch parsing errors
-Eslintrb::EslintTask.new :eslint_build do |t|
-  t.pattern = '_site/' + js_paths
-end
-
-# Lint ruby files
-RuboCop::RakeTask.new :rubocop do |t|
-  t.options = ['--display-cop-names']
-end
+task eslint: %i[eslint:frontmatter eslint:source eslint:built]
