Convert double quotes in JavaScript to single quotes

--- a/.eslintrc
+++ b/.eslintrc
@@ -36,7 +36,7 @@
     "space-before-function-paren": ["error", "never"],
     "quotes": [
       "warn",
-      "double"
+      "single"
     ]
   },
   "env": {
