--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,15 @@
 
 # Generated files
 .tmp
+.tmp-eslintignore
 
 # Jekyll
 _site/
 .sass-cache/
 .jekyll-metadata
+
+# Node
+node_modules
 
 # Local development
 _workspace/
