--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: ruby
 gemfile: bin/Gemfile
-script: bundle exec rake -f bin/Rakefile
+script: BUNDLE_GEMFILE=bin/Gemfile rake -f bin/Rakefile
+# script: bin/test
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
