--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: ruby
 install: bin/install
-script:
-  - BUNDLE_GEMFILE=bin/Gemfile rake -f bin/Rakefile
-  # - bin/test
+script: bin/test
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
