--- a/bin/js/package.json
+++ b/bin/js/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "eslint": "^4.19.1",
     "glob": "^7.1.2",
+    "jsdom": "^11.7.0",
     "mkdirp": "^0.5.1",
     "tape": "^4.9.0"
   }
