--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "doc": "docs"
   },
   "scripts": {
-    "build": "eleventy", 
+    "build": "rm -rf _site && eleventy",
+    "build:debug": "rm -rf _site && DEBUG=Eleventy* eleventy",
+    "serve": "eleventy --serve --port=8081",
     "test": "test"
   },
   "repository": {
