--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "doc": "docs"
   },
   "scripts": {
+    "build": "npm run clean && npm run copy && eleventy",
+    "build:debug": "npm run clean && npm run copy && DEBUG=Eleventy* eleventy",
     "clean": "rm -rf _site",
-    "build": "npm run clean && eleventy",
-    "build:debug": "npm run clean && DEBUG=Eleventy* eleventy",
-    "serve": "npm run clean && mkdir -p _includes/docs && cp docs/README.md _includes/docs/README.md && eleventy --serve --port=8081",
+    "copy": "mkdir -p _includes/docs && cp docs/README.md _includes/docs/README.md",
+    "serve": "npm run clean && npm run copy && eleventy --serve --port=8081",
     "test": "test"
   },
   "repository": {
