--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "homepage": "https://github.com/johnteske/vectorscores#readme",
   "dependencies": {
     "@11ty/eleventy": "^0.7.0",
+    "app-root-path": "^2.1.0",
     "postcss": "^7.0.14",
     "postcss-cli": "^6.1.1",
     "postcss-custom-properties": "^8.0.9",
