--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "npm run clean && npm run copy && npm run css && eleventy",
     "build:debug": "DEBUG=Eleventy* npm run build",
     "clean": "rm -rf _site",
-    "css": "postcss assets/css/main.css --no-map --use postcss-import postcss-custom-properties -o _site/assets/css/main.css",
+    "css": "postcss assets/css/*.css --no-map --use postcss-import postcss-custom-properties --dir _site/assets/css",
     "css:lint": "stylelint assets/css/*.css",
     "css:fix": "npm run css:lint -- --fix",
     "copy": "mkdir -p _includes/docs && cp docs/README.md _includes/docs/README.md",
