Clean up sass files, target unconverted scores to ignore

--- a/.eleventyignore
+++ b/.eleventyignore
@@ -1,5 +1,15 @@
 assets
 bin
-# TODO
-scores
+scores/3d-object
+scores/Bravura
+scores/Textural-Messages
+scores/adsr
+scores/decision-tree
+scores/dirge-march
+scores/glob
+scores/globject
+scores/storyboard
+scores/time-control
+scores/topographies-ii
+scores/trashfire
 
