--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "build": "npm run clean && npm run copy && npm run build:js && npm run build:css && eleventy",
     "build:debug": "DEBUG=Eleventy* npm run build",
     "build:css": "postcss assets/css/*.css --no-map --use postcss-import postcss-custom-properties --dir _site/assets/css",
-    "build:js": "rollup assets/js/vectorscores.js --format iife --name \"vectorscores\" --file _site/assets/js/vectorscores.js",
-    "clean": "rm -rf _site",
+    "build:js": "npm run build:js:vs; npm run build:js:scores",
+    "build:js:vs": "rollup assets/js/vectorscores.js --format iife --name \"vectorscores\" --file _site/assets/js/vectorscores.js",
+    "build:js:scores": "for s in scores/**/index.js; do rollup \"${s}\" --format iife --file \"_site/${s}\"; done",
+    "clean": "rm -rf _site && mkdir _site",
     "css:lint": "stylelint assets/css/**/*.css",
     "css:fix": "npm run css:lint -- --fix",
-    "copy": "mkdir -p _includes/docs && cp docs/README.md _includes/docs/README.md",
+    "copy": "npm run copy:docs; npm run copy:scores",
+    "copy:docs": "cp --parents docs/README.md _includes",
+    "copy:scores": "cp --parents scores/**/*.css _site", 
     "lint:fix": "prettier --write {.,pages}/*.js",
     "serve": "npm run build -- --serve --port=8081",
     "test": "test"
