--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "css:fix": "npm run css:lint -- --fix",
     "copy": "npm run copy:docs; npm run copy:scores",
     "copy:docs": "rsync -R docs/README.md _includes",
-    "copy:scores": "rsync -R scores/**/*.css _site",
+    "copy:scores": "rsync -R scores/{*,*/*}/styles.css _site",
     "lint:fix": "prettier --write {.,pages}/*.js",
     "serve": "npm run build -- --serve --port=8081",
     "test": "test"
