--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "doc": "docs"
   },
   "scripts": {
-    "build": "npm run clean && npm run copy && npm run build:js && npm run build:css && eleventy",
+    "build": "mkdir -p _site && npm run copy && npm run build:js && npm run build:css && eleventy",
     "build:debug": "DEBUG=Eleventy* npm run build",
     "build:css": "postcss assets/css/*.css --no-map --use postcss-import postcss-custom-properties --dir _site/assets/css",
     "build:js": "npm run build:js:vs; npm run build:js:scores",
     "build:js:vs": "rollup assets/js/vectorscores.js --format iife --name \"vectorscores\" --file _site/assets/js/vectorscores.js",
     "build:js:scores": "find scores -name 'index.js' | xargs -I {} rollup {} --format iife --file _site/{}",
-    "clean": "#rm -rf _site && mkdir _site",
     "css:lint": "stylelint assets/css/**/*.css",
     "css:fix": "npm run css:lint -- --fix",
     "copy": "npm run copy:docs; npm run copy:scores",
