--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "postcss-cli": "^6.1.3",
     "postcss-custom-properties": "^8.0.11",
     "postcss-import": "^12.0.1",
-    "rollup": "^1.18.0"
+    "rollup": "^1.18.0",
+    "ws": "^7.1.1"
   },
   "devDependencies": {
     "prettier": "^1.18.2",
