--- a/package.json
+++ b/package.json
@@ -10,17 +10,14 @@
     "build": "mkdir -p _site && npm run copy && npm run build:js && npm run build:css && eleventy",
     "build:debug": "DEBUG=Eleventy* npm run build",
     "build:css": "postcss assets/css/*.css --no-map --use postcss-import postcss-custom-properties --dir _site/assets/css",
-    "build:js": "npm run build:js:vs; npm run build:js:scores",
-    "build:js:vs": "rollup assets/js/vectorscores.js --format iife --name \"vectorscores\" --file _site/assets/js/vectorscores.js",
-    "build:js:scores": "find scores -name 'index.js' | xargs -I {} rollup {} --format iife --file _site/{}",
+    "build:js": "find {assets/js,scores} -name 'vectorscores.js' -o -name 'index.js' | xargs -I {} rollup {} --format iife --file _site/{}",
     "css:lint": "stylelint assets/css/**/*.css",
     "css:fix": "npm run css:lint -- --fix",
     "copy": "npm run copy:docs; npm run copy:scores",
     "copy:docs": "rsync -R docs/README.md _includes",
     "copy:scores": "rsync -R scores/{*,*/*}/styles.css _site",
     "lint:fix": "prettier --write {.,_includes/*/*,pages,scores/*,scores/*/*}/*.js",
-    "serve": "npm run build -- --serve --port=8081",
-    "test": "test"
+    "serve": "npm run build -- --serve --port=8081"
   },
   "repository": {
     "type": "git",
