--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
   "scripts": {
     "build": "mkdir -p _site && npm run copy && npm run build:js && npm run build:css && eleventy",
     "build:debug": "DEBUG=Eleventy* npm run build",
+
     "build:css": "postcss assets/css/*.css --no-map --use postcss-import postcss-custom-properties --dir _site/assets/css",
+
     "build:js": "find {assets/js,scores} -name 'vectorscores.js' -o -name 'index.js' | xargs -I {} rollup {} --format iife --file _site/{}",
-    "css:lint": "stylelint assets/css/**/*.css",
-    "css:fix": "npm run css:lint -- --fix",
+
     "copy": "npm run copy:docs; npm run copy:scores",
     "copy:docs": "rsync -R docs/README.md _includes",
     "copy:scores": "rsync -R scores/{*,*/*}/styles.css _site",
-    "lint:fix": "prettier --write {.,_includes/*/*,pages,scores/*,scores/*/*}/*.js",
+
+    "fix:css": "stylelint assets/css/**/*.css --fix",
+    "fix:format": "prettier --write {.,_includes/*/*,pages,scores/*,scores/*/*}/*.js",
+
     "serve": "npm run build -- --serve --port=8081"
   },
   "repository": {
