--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "postcss-custom-properties": "^8.0.11",
     "postcss-import": "^12.0.1",
     "rollup": "^1.18.0",
+    "serve": "^11.1.0",
     "ws": "^7.1.1"
   },
   "devDependencies": {
