--- a/package.json
+++ b/package.json
@@ -8,17 +8,25 @@
   "directories": {
     "doc": "docs"
   },
+  "config": {
+    "postcss_options": "--no-map --use postcss-import postcss-custom-properties"
+  },
   "scripts": {
-    "build": "mkdir -p _site && npm run copy && npm run build:js && npm run build:css && eleventy",
-    "build:debug": "DEBUG=Eleventy* npm run build",
-    "build:css": "postcss assets/css/*.css --no-map --use postcss-import postcss-custom-properties --dir _site/assets/css",
+    "build": "mkdir -p _site; npm run build:js & npm run build:css & npm run copy && eleventy; wait",
+
+    "build:css": "npm run build:css:assets & npm run build:css:scores",
+    "build:css:assets": "postcss assets/css/*.css --dir _site/assets/css $npm_package_config_postcss_options",
+    "build:css:scores": "postcss scores/{*,*/*}/styles.css --base scores --dir _site/scores $npm_package_config_postcss_options",
+
     "build:js": "find {assets/js,scores} -name 'vectorscores.js' -o -name 'index.js' | xargs -I {} rollup {} --format iife --file _site/{}",
-    "copy": "npm run copy:docs; npm run copy:scores",
-    "copy:docs": "copyfiles docs/README.md _includes",
-    "copy:scores": "copyfiles -a scores/{*,*/*}/styles.css _site",
+
+    "copy": "copyfiles docs/README.md _includes",
+
     "fix:css": "stylelint assets/css/**/*.css --fix",
     "fix:format": "prettier --write {.,_includes/*/*,pages,scores/*,scores/*/*}/*.js",
-    "serve": "serve -n -l 8081 _site"
+
+    "serve": "serve -n -l 8081 _site",
+    "watch": "chokidar *.* -i 'node_modules' -i '_site' -c \"npm run build && echo 'done'\""
   },
   "repository": {
     "type": "git",
@@ -38,6 +46,7 @@
   "dependencies": {
     "@11ty/eleventy": "^0.7.0",
     "app-root-path": "^2.2.1",
+    "chokidar-cli": "^2.0.0",
     "copyfiles": "^2.1.1",
     "postcss": "^7.0.17",
     "postcss-cli": "^6.1.3",
