--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "app-root-path": "^3.0.0",
     "chokidar-cli": "^2.1.0",
     "copyfiles": "^2.2.0",
+    "mkdirp": "^1.0.3",
     "postcss": "^7.0.27",
     "postcss-cli": "^7.1.0",
     "postcss-custom-properties": "^9.1.1",
