Replace ./bin/deploy with gh-pages package

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build:css:scores": "postcss scores/{*,*/*}/styles.css --base scores --dir _site/scores $npm_package_config_postcss_options",
     "build:js": "find {assets/js,scores} -name 'vectorscores.js' -o -name 'index.js' | xargs -I {} rollup {} --silent --format iife --file _site/{}",
     "copy": "copyfiles docs/README.md _includes",
+    "deploy": "SITE_BASE_URL=vectorscores npm run build && gh-pages -d _site",
     "fix:css": "stylelint assets/css/**/*.css --fix",
     "fix:format": "prettier --write {.,_includes/*/*,pages,scores/*,scores/*/*}/*.js",
     "serve": "serve -n -l 8081 _site",
@@ -44,6 +45,7 @@
     "app-root-path": "^3.0.0",
     "chokidar-cli": "^2.1.0",
     "copyfiles": "^2.2.0",
+    "gh-pages": "^2.2.0",
     "mkdirp": "^1.0.3",
     "postcss": "^7.0.27",
     "postcss-cli": "^7.1.0",
