--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "chokidar-cli": "^2.1.0",
     "copyfiles": "^2.2.0",
     "gh-pages": "^2.2.0",
-    "mkdirp": "^1.0.3",
+    "ffdb-jtm": "johnteske/ffdb-jtm",
     "postcss": "^7.0.27",
     "postcss-cli": "^7.1.0",
     "postcss-custom-properties": "^9.1.1",
